updated NetSci Sat Schedule
updated NetSci Sat Schedule

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -4058,7 +4058,7 @@
 					<key>page37 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-29T16:42:16Z</date>
+						<date>2019-01-31T21:47:15Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4127,11 +4127,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iOGUW8X26d8e
-								G7eERoqajQ==
+								SNTu3eSjcltd
+								Qsina2/m4g==
 								</data>
 								<key>Size</key>
-								<integer>137529</integer>
+								<integer>142065</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11152,7 +11152,7 @@
 					<key>page72 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-31T20:05:30Z</date>
+						<date>2019-01-31T21:16:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11211,11 +11211,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								z4qsauw8NGCd
-								akwIHDM+eQ==
+								KUYcC4AfnDBV
+								NOJYDD045g==
 								</data>
 								<key>Size</key>
-								<integer>116640</integer>
+								<integer>119308</integer>
 							</dict>
 							<key>files/stacks_page_page72.js</key>
 							<dict>
@@ -11231,11 +11231,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IuvwYnKABZxG
-								9sfQxrb4Ew==
+								qWbiUSLyefba
+								noJCZdNBkA==
 								</data>
 								<key>Size</key>
-								<integer>47592</integer>
+								<integer>49722</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11526,7 +11526,7 @@
 					<key>page76 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-31T20:16:07Z</date>
+						<date>2019-01-31T21:24:15Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11585,11 +11585,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DoMDUSRD8hzb
-								sJid0l9ZIw==
+								SXXtIuzDG8V3
+								eT+EyN1EBw==
 								</data>
 								<key>Size</key>
-								<integer>120022</integer>
+								<integer>119808</integer>
 							</dict>
 							<key>files/stacks_page_page76.js</key>
 							<dict>
@@ -11605,11 +11605,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sVsUs5lMqvUk
-								M2nw3xhdtQ==
+								20nZ2rafbnLK
+								S7rOfWLHmA==
 								</data>
 								<key>Size</key>
-								<integer>50246</integer>
+								<integer>50106</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12122,7 +12122,7 @@
 					<key>page81 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-31T20:11:05Z</date>
+						<date>2019-01-31T21:32:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12181,11 +12181,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								L9wokhqzqxP3
-								uy2EjvBsmw==
+								ahsXO2Y0yRxx
+								0LgpulIMxg==
 								</data>
 								<key>Size</key>
-								<integer>115476</integer>
+								<integer>115382</integer>
 							</dict>
 							<key>files/stacks_page_page81.js</key>
 							<dict>
@@ -12201,17 +12201,113 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ei72F2VNWX7z
-								buBD9HcV8g==
+								fbysPRwJ7c1J
+								xCwZoy3ouw==
 								</data>
 								<key>Size</key>
-								<integer>51870</integer>
+								<integer>47236</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
 						<string>page81</string>
 						<key>SiteRoot</key>
 						<string>events/ALIFE-2020/Calls/Papers</string>
+						<key>Version</key>
+						<integer>3</integer>
+					</dict>
+					<key>page82 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
+					<dict>
+						<key>CreationDate</key>
+						<date>2019-01-31T21:32:13Z</date>
+						<key>DigestAlgorithm</key>
+						<string>MD5</string>
+						<key>PageDigests</key>
+						<dict>
+							<key>files/backgroundImage_110467.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								t6sVWeH5Dwiz
+								lTdhjl5wGA==
+								</data>
+								<key>Size</key>
+								<integer>3099081</integer>
+							</dict>
+							<key>files/small_p60311_n109623.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ZFHf9zniv4SK
+								z9ywIWAR7Q==
+								</data>
+								<key>Size</key>
+								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								yZQqhuEMgia3
+								owVDiEQk8g==
+								</data>
+								<key>Size</key>
+								<integer>13322</integer>
+							</dict>
+							<key>files/stacks-image-90966db-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								kcVxqK0Y23YI
+								Ns11kdYJ6w==
+								</data>
+								<key>Size</key>
+								<integer>21714</integer>
+							</dict>
+							<key>files/stacks-image-e85c4e3.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								u2Q2vUDzWirB
+								IK07lqIzzw==
+								</data>
+								<key>Size</key>
+								<integer>594156</integer>
+							</dict>
+							<key>files/stacks_page_page82.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								3Isfzb9Tlqxy
+								Y8eKiWPuIQ==
+								</data>
+								<key>Size</key>
+								<integer>115382</integer>
+							</dict>
+							<key>files/stacks_page_page82.js</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								p1G43kf2PndS
+								d92j3F0oxA==
+								</data>
+								<key>Size</key>
+								<integer>24751</integer>
+							</dict>
+							<key>index.html</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								z4Sn+8JSS8LQ
+								3oTQKsY4dg==
+								</data>
+								<key>Size</key>
+								<integer>47245</integer>
+							</dict>
+						</dict>
+						<key>PageID</key>
+						<string>page82</string>
+						<key>SiteRoot</key>
+						<string>events/ALIFE-2020/Calls/workshops</string>
 						<key>Version</key>
 						<integer>3</integer>
 					</dict>
@@ -12396,7 +12492,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-31T20:05:30Z</date>
+						<date>2019-01-31T21:32:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13435,11 +13531,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OYRZXzQbBOta
-								LIpHIuBcDA==
+								8j9XpM5doOEf
+								XpaYVin/Iw==
 								</data>
 								<key>Size</key>
-								<integer>4482</integer>
+								<integer>4519</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13519,31 +13615,31 @@
 				ZW1vdGVSZXNvdXJjZVxQdWJsaXNoZWRVUkxdUHVibGlz
 				aGVkRGF0ZV8QD0NoYW5nZWRTdGF0dXNlc1ROYW1lWklk
 				ZW50aWZpZXJZVGltZVN0YW1wWUZpbGVUb2tlbgiAEIAA
-				gACADIAIgAeACoAJXxAkMkU4QzdEREMtQUVCNC00MUZC
-				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
-				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
-				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HBAceEfwY2gAvSPj9AQVokY2xhc3Nu
-				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
-				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
-				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
-				P0xNXxATTlNNdXRhYmxlRGljdGlvbmFyeaNMTkJcTlNE
-				aWN0aW9uYXJ50j4/UFFeUldTaXRlUmVzb3VyY2WiUkJe
-				UldTaXRlUmVzb3VyY2XZJQsmJygpKissLS4vL1hZWltc
-				CIAQgACAAIAWgBOAEoAVgBRfECRDNUI0NTE0Ri02RUI5
-				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
-				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
-				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEBx4R/CP+A
+				gACADIAIgAeACoAJXxAkQzVCNDUxNEYtNkVCOS00OUM1
+				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
+				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
+				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEB0jJe
+				LUmAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
+				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
+				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
+				aWN0aW9uYXJ5o0xOQlxOU0RpY3Rpb25hcnnSPj9QUV5S
+				V1NpdGVSZXNvdXJjZaJSQl5SV1NpdGVSZXNvdXJjZdkl
+				CyYnKCkqKywtLi8vWFlaW1wIgBCAAIAAgBaAE4ASgBWA
+				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
+				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
+				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEB0jJeMG6A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
-				ckiiWjOAEoAHoiIhgBGABoAP0wkKC3d6SKJaM4ASgAei
-				e3yAG4AggA/UC3+AgYKDESJYQ2hpbGRyZW5WUGFyZW50
-				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegBHSCguH
+				ckiiM1qAB4ASoiEigAaAEYAP0wkKC3d6SKIzWoAHgBKi
+				e3yAG4AggA/UC3+AgYKDESFYQ2hpbGRyZW5WUGFyZW50
+				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegAbSCguH
 				iKCAHdI+P4qLXk5TTXV0YWJsZUFycmF5o4qMQldOU0Fy
 				cmF51At/gIGCjy8vgCKAH4AAgADSCguTiKJ7fIAbgCCA
-				HdQLf4CBgpkRIYAigCGAHoAG0goLnYiggB3SPj+goV8Q
+				HdQLf4CBgpkRIoAigCGAHoAR0goLnYiggB3SPj+goV8Q
 				EFJXU291cmNlTGlzdE5vZGWiokJfEBBSV1NvdXJjZUxp
 				c3ROb2Rl0wkKC6SlSKCggA/SPj+oqV8QElJXUmVzb3Vy
 				Y2VEYXRhYmFzZaKqQl8QElJXUmVzb3VyY2VEYXRhYmFz
@@ -13551,9 +13647,9 @@
 				b3SAAQAIABEAGgAjAC0AMgA3AGAAZgBtAHUAgACHAIoA
 				jACOAJEAkwCVAJcAoAClALAAvwDIANEA2wDdAN8A4QDj
 				AOUA6gDtAO8A8QDzAQYBFQEiATABQgFHAVIBXAFmAWcB
-				aQFrAW0BbwFxAXMBdQF3AZ4BxAHrAfAB+AIBAgMCCAIT
-				AhwCIwImAi8CNgI4AjoCPAI+AkACcAJxAnYCjAKQAp0C
-				ogKxArQCwwLWAtcC2QLbAt0C3wLhAuMC5QLnAw4DRQNs
+				aQFrAW0BbwFxAXMBdQF3AZ4B1QH8AgECCQISAhQCGQIk
+				Ai0CNAI3AkACRwJJAksCTQJPAlECgQKCAocCnQKhAq4C
+				swLCAsUC1ALnAugC6gLsAu4C8ALyAvQC9gL4Ax8DRQNs
 				A3EDegN8A4MDhQOHA4kDiwONA70DwgPPA9MD2QPgA+MD
 				5QPnA+oD7APuA/AD9wP6A/wD/gQBBAMEBQQHBBAEGQQg
 				BDUENwQ5BDsEPQRCBEMERQRKBFkEXQRlBG4EcARyBHQE
