--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-29T16:42:16Z</date>
+						<date>2019-01-31T21:47:15Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iOGUW8X26d8e
-								G7eERoqajQ==
+								SNTu3eSjcltd
+								Qsina2/m4g==
 								</data>
 								<key>Size</key>
-								<integer>137529</integer>
+								<integer>142065</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
