--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/4-ALife-Calls/ChildPages/Contents.plist
@@ -14,6 +14,7 @@
 			<key>Subsandwiches</key>
 			<array>
 				<string>1-Papers</string>
+				<string>2-Workshops002FTutorials002FSpecial-Sessions</string>
 			</array>
 		</dict>
 	</array>
