--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/4-ALife-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/4-ALife-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-31T20:16:07Z</date>
+						<date>2019-01-31T21:24:15Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DoMDUSRD8hzb
-								sJid0l9ZIw==
+								SXXtIuzDG8V3
+								eT+EyN1EBw==
 								</data>
 								<key>Size</key>
-								<integer>120022</integer>
+								<integer>119808</integer>
 							</dict>
 							<key>files/stacks_page_page76.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sVsUs5lMqvUk
-								M2nw3xhdtQ==
+								20nZ2rafbnLK
+								S7rOfWLHmA==
 								</data>
 								<key>Size</key>
-								<integer>50246</integer>
+								<integer>50106</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
