--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/3-ALife-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/3-ALife-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-31T20:05:30Z</date>
+						<date>2019-01-31T21:16:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								z4qsauw8NGCd
-								akwIHDM+eQ==
+								KUYcC4AfnDBV
+								NOJYDD045g==
 								</data>
 								<key>Size</key>
-								<integer>116640</integer>
+								<integer>119308</integer>
 							</dict>
 							<key>files/stacks_page_page72.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IuvwYnKABZxG
-								9sfQxrb4Ew==
+								qWbiUSLyefba
+								noJCZdNBkA==
 								</data>
 								<key>Size</key>
-								<integer>47592</integer>
+								<integer>49722</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
