Satellites Update Netsci
Satellites Update Netsci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -4058,7 +4058,7 @@
 					<key>page37 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-31T21:47:15Z</date>
+						<date>2019-02-01T14:58:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4107,11 +4107,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								E07kFWL3r42l
-								keYPe1IclQ==
+								TWHN12MaI0fs
+								RZ6T1PDUnQ==
 								</data>
 								<key>Size</key>
-								<integer>224265</integer>
+								<integer>225917</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
@@ -4127,11 +4127,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SNTu3eSjcltd
-								Qsina2/m4g==
+								cd2HLCivriQu
+								KiS50J6bRQ==
 								</data>
 								<key>Size</key>
-								<integer>142065</integer>
+								<integer>144529</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10574,7 +10574,7 @@
 					<key>page7 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T15:20:26Z</date>
+						<date>2019-02-01T14:34:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10833,11 +10833,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8MobgyhBhRMp
-								7+ETJqxv3w==
+								Djr277P9CsaN
+								NoNUCbiNag==
 								</data>
 								<key>Size</key>
-								<integer>128541</integer>
+								<integer>128466</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12390,7 +12390,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-31T20:05:30Z</date>
+						<date>2019-02-01T14:58:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12439,11 +12439,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UfRXMKkzwyK0
-								Mj5brP+Luw==
+								jzNP2INq1ejQ
+								D9jJagRV5A==
 								</data>
 								<key>Size</key>
-								<integer>4535</integer>
+								<integer>4567</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12492,7 +12492,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-31T21:32:13Z</date>
+						<date>2019-02-01T14:58:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13531,8 +13531,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8j9XpM5doOEf
-								XpaYVin/Iw==
+								V0YBmxNuG4DQ
+								+Jc4y7JJXA==
 								</data>
 								<key>Size</key>
 								<integer>4519</integer>
@@ -13619,8 +13619,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEB0jJe
-				LUmAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcECSxiC
+				7CmAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -13630,7 +13630,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEB0jJeMG6A
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcECSxiC7vKA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
