--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-31T21:47:15Z</date>
+						<date>2019-02-01T14:58:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								E07kFWL3r42l
-								keYPe1IclQ==
+								TWHN12MaI0fs
+								RZ6T1PDUnQ==
 								</data>
 								<key>Size</key>
-								<integer>224265</integer>
+								<integer>225917</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SNTu3eSjcltd
-								Qsina2/m4g==
+								cd2HLCivriQu
+								KiS50J6bRQ==
 								</data>
 								<key>Size</key>
-								<integer>142065</integer>
+								<integer>144529</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
