changed NS notification date for abstracts
changed NS notification date for abstracts

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -8100,7 +8100,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T15:20:27Z</date>
+						<date>2019-02-01T18:05:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8169,8 +8169,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uMJs1PDo35Jm
-								55ha0mOmoQ==
+								7jkQEFxOyg4C
+								eUap46jNVg==
 								</data>
 								<key>Size</key>
 								<integer>78592</integer>
@@ -9536,7 +9536,7 @@
 					<key>page61 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T15:20:27Z</date>
+						<date>2019-02-01T18:05:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9605,8 +9605,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RnqnW5FzizzC
-								vwrrJlIkAA==
+								HNzN3ixLkwRT
+								5bTbdrUipQ==
 								</data>
 								<key>Size</key>
 								<integer>50885</integer>
@@ -12390,7 +12390,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T14:58:54Z</date>
+						<date>2019-02-01T18:05:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12439,11 +12439,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jzNP2INq1ejQ
-								D9jJagRV5A==
+								UfRXMKkzwyK0
+								Mj5brP+Luw==
 								</data>
 								<key>Size</key>
-								<integer>4567</integer>
+								<integer>4535</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12492,7 +12492,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T14:58:54Z</date>
+						<date>2019-02-01T18:05:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13531,11 +13531,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								V0YBmxNuG4DQ
-								+Jc4y7JJXA==
+								IA2YxCPLr5It
+								WuIDFMmHVA==
 								</data>
 								<key>Size</key>
-								<integer>4519</integer>
+								<integer>3409</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13619,8 +13619,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcECSxiC
-				7CmAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcECYO/R
+				lluAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -13630,7 +13630,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcECSxiC7vKA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcECYO/Rmq6A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
