--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T14:58:54Z</date>
+						<date>2019-02-01T18:53:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TWHN12MaI0fs
-								RZ6T1PDUnQ==
+								4wlnzXvRbdQ8
+								TG3L+1wqSA==
 								</data>
 								<key>Size</key>
-								<integer>225917</integer>
+								<integer>263578</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cd2HLCivriQu
-								KiS50J6bRQ==
+								OTuIK3j5e3ud
+								1QPKou7+Mw==
 								</data>
 								<key>Size</key>
-								<integer>144529</integer>
+								<integer>162646</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
