posted satellites and schedule
posted satellites and schedule

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -4058,7 +4058,7 @@
 					<key>page37 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T18:53:40Z</date>
+						<date>2019-02-01T20:50:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4107,31 +4107,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4wlnzXvRbdQ8
-								TG3L+1wqSA==
+								/CoFhxoVpSn9
+								FLIf5bMWWg==
 								</data>
 								<key>Size</key>
-								<integer>263578</integer>
+								<integer>108494</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								g5wZFTXEWPm9
-								icH0BkbuEQ==
+								gmaAuBE1nYTT
+								ZP9VeBcMIA==
 								</data>
 								<key>Size</key>
-								<integer>27845</integer>
+								<integer>24751</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OTuIK3j5e3ud
-								1QPKou7+Mw==
+								xwR9M3BrQEE0
+								8+CGq2b5qg==
 								</data>
 								<key>Size</key>
-								<integer>162646</integer>
+								<integer>41725</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7864,7 +7864,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-29T15:59:44Z</date>
+						<date>2019-02-01T20:50:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7899,6 +7899,16 @@
 								<key>Size</key>
 								<integer>38805</integer>
 							</dict>
+							<key>files/stacks-image-0655a30-350x250.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								CGMCqHLLwgog
+								XwGGhaiz1g==
+								</data>
+								<key>Size</key>
+								<integer>18286</integer>
+							</dict>
 							<key>files/stacks-image-127916a.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7929,6 +7939,26 @@
 								<key>Size</key>
 								<integer>61496</integer>
 							</dict>
+							<key>files/stacks-image-1fdb6e6-350x250.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								g6thop/HnSKe
+								Ig6OjJrbbA==
+								</data>
+								<key>Size</key>
+								<integer>18459</integer>
+							</dict>
+							<key>files/stacks-image-1fdb6e6-350x250@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								tXjKBMneT+k2
+								iYAI/fgNXQ==
+								</data>
+								<key>Size</key>
+								<integer>26330</integer>
+							</dict>
 							<key>files/stacks-image-3179185-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7939,6 +7969,46 @@
 								<key>Size</key>
 								<integer>28413</integer>
 							</dict>
+							<key>files/stacks-image-5433a01-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9DG1zXcng4pv
+								1Cs+7y0zHw==
+								</data>
+								<key>Size</key>
+								<integer>21510</integer>
+							</dict>
+							<key>files/stacks-image-5433a01-350x375@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								IHD+CTacdDRA
+								MnGBEKRyCQ==
+								</data>
+								<key>Size</key>
+								<integer>33052</integer>
+							</dict>
+							<key>files/stacks-image-571e73c-350x375.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								w++uVQIsNKzQ
+								8sk0yV0SyQ==
+								</data>
+								<key>Size</key>
+								<integer>219500</integer>
+							</dict>
+							<key>files/stacks-image-571e73c-350x375@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								0zgjt6cRhe85
+								sQl2mFszmg==
+								</data>
+								<key>Size</key>
+								<integer>722662</integer>
+							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7948,6 +8018,26 @@
 								</data>
 								<key>Size</key>
 								<integer>13322</integer>
+							</dict>
+							<key>files/stacks-image-6467c3a-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Krp7Og269lDp
+								zJmYejGYxg==
+								</data>
+								<key>Size</key>
+								<integer>29317</integer>
+							</dict>
+							<key>files/stacks-image-7700296-350x375.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								P6aCQhxrPVYY
+								vqg7M+aIkQ==
+								</data>
+								<key>Size</key>
+								<integer>257542</integer>
 							</dict>
 							<key>files/stacks-image-78f98c2-350x375.jpg</key>
 							<dict>
@@ -8009,6 +8099,46 @@
 								<key>Size</key>
 								<integer>21714</integer>
 							</dict>
+							<key>files/stacks-image-a0c9938-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								+9qPfPvDFaVC
+								lDF0ikR3Dw==
+								</data>
+								<key>Size</key>
+								<integer>21308</integer>
+							</dict>
+							<key>files/stacks-image-bce74cf-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								rIsBSPXIJg9o
+								JpYbQc66tQ==
+								</data>
+								<key>Size</key>
+								<integer>35003</integer>
+							</dict>
+							<key>files/stacks-image-bded2de-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GFmuIpFOOBIH
+								etd5uUV0Pw==
+								</data>
+								<key>Size</key>
+								<integer>30136</integer>
+							</dict>
+							<key>files/stacks-image-bded2de-350x375@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								LVbyvasYrV91
+								Rc5zjmtsSw==
+								</data>
+								<key>Size</key>
+								<integer>52151</integer>
+							</dict>
 							<key>files/stacks-image-e5e8064-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -8059,35 +8189,45 @@
 								<key>Size</key>
 								<integer>421454</integer>
 							</dict>
+							<key>files/stacks-image-f9056c6-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								FkA9v/PoA28I
+								V57P/MIy9A==
+								</data>
+								<key>Size</key>
+								<integer>25454</integer>
+							</dict>
 							<key>files/stacks_page_page55.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								kITO5Izi7x1a
-								TVTXCalZew==
+								wb0JvwO7S+D9
+								XJRqKRie9g==
 								</data>
 								<key>Size</key>
-								<integer>168847</integer>
+								<integer>382498</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								+Lxc2vamtSl1
-								fjU9ZfJgSw==
+								V04PVzRX0+uE
+								qWv58rAnnw==
 								</data>
 								<key>Size</key>
-								<integer>26207</integer>
+								<integer>39493</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								kRLeF25VUE3H
-								mnnySJutJg==
+								T90pDGGqp1wc
+								az1jLCIHAA==
 								</data>
 								<key>Size</key>
-								<integer>99302</integer>
+								<integer>306027</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12390,7 +12530,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T18:05:17Z</date>
+						<date>2019-02-01T20:50:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12439,11 +12579,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UfRXMKkzwyK0
-								Mj5brP+Luw==
+								jH9Ze0I3oJZ6
+								3DNmishB6g==
 								</data>
 								<key>Size</key>
-								<integer>4535</integer>
+								<integer>4567</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12492,7 +12632,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T18:53:40Z</date>
+						<date>2019-02-01T20:50:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13531,8 +13671,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hwxAzPR7NWot
-								Q++sM+0jKg==
+								FZ+nGiOnDr9V
+								WWR7xi45yw==
 								</data>
 								<key>Size</key>
 								<integer>4519</integer>
@@ -13615,31 +13755,31 @@
 				ZW1vdGVSZXNvdXJjZVxQdWJsaXNoZWRVUkxdUHVibGlz
 				aGVkRGF0ZV8QD0NoYW5nZWRTdGF0dXNlc1ROYW1lWklk
 				ZW50aWZpZXJZVGltZVN0YW1wWUZpbGVUb2tlbgiAEIAA
-				gACADIAIgAeACoAJXxAkMkU4QzdEREMtQUVCNC00MUZC
-				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
-				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
-				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HBAmabP0MPgAvSPj9AQVokY2xhc3Nu
-				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
-				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
-				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
-				P0xNXxATTlNNdXRhYmxlRGljdGlvbmFyeaNMTkJcTlNE
-				aWN0aW9uYXJ50j4/UFFeUldTaXRlUmVzb3VyY2WiUkJe
-				UldTaXRlUmVzb3VyY2XZJQsmJygpKissLS4vL1hZWltc
-				CIAQgACAAIAWgBOAEoAVgBRfECRDNUI0NTE0Ri02RUI5
-				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
-				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
-				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcECZps/RhOA
+				gACADIAIgAeACoAJXxAkQzVCNDUxNEYtNkVCOS00OUM1
+				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
+				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
+				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcECdFhK
+				IB2AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
+				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
+				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
+				aWN0aW9uYXJ5o0xOQlxOU0RpY3Rpb25hcnnSPj9QUV5S
+				V1NpdGVSZXNvdXJjZaJSQl5SV1NpdGVSZXNvdXJjZdkl
+				CyYnKCkqKywtLi8vWFlaW1wIgBCAAIAAgBaAE4ASgBWA
+				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
+				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
+				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcECdFhKIrSA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
-				ckiiWjOAEoAHoiIhgBGABoAP0wkKC3d6SKJaM4ASgAei
-				e3yAG4AggA/UC3+AgYKDESJYQ2hpbGRyZW5WUGFyZW50
-				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegBHSCguH
+				ckiiM1qAB4ASoiEigAaAEYAP0wkKC3d6SKIzWoAHgBKi
+				e3yAG4AggA/UC3+AgYKDESFYQ2hpbGRyZW5WUGFyZW50
+				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegAbSCguH
 				iKCAHdI+P4qLXk5TTXV0YWJsZUFycmF5o4qMQldOU0Fy
 				cmF51At/gIGCjy8vgCKAH4AAgADSCguTiKJ7fIAbgCCA
-				HdQLf4CBgpkRIYAigCGAHoAG0goLnYiggB3SPj+goV8Q
+				HdQLf4CBgpkRIoAigCGAHoAR0goLnYiggB3SPj+goV8Q
 				EFJXU291cmNlTGlzdE5vZGWiokJfEBBSV1NvdXJjZUxp
 				c3ROb2Rl0wkKC6SlSKCggA/SPj+oqV8QElJXUmVzb3Vy
 				Y2VEYXRhYmFzZaKqQl8QElJXUmVzb3VyY2VEYXRhYmFz
@@ -13647,9 +13787,9 @@
 				b3SAAQAIABEAGgAjAC0AMgA3AGAAZgBtAHUAgACHAIoA
 				jACOAJEAkwCVAJcAoAClALAAvwDIANEA2wDdAN8A4QDj
 				AOUA6gDtAO8A8QDzAQYBFQEiATABQgFHAVIBXAFmAWcB
-				aQFrAW0BbwFxAXMBdQF3AZ4BxAHrAfAB+AIBAgMCCAIT
-				AhwCIwImAi8CNgI4AjoCPAI+AkACcAJxAnYCjAKQAp0C
-				ogKxArQCwwLWAtcC2QLbAt0C3wLhAuMC5QLnAw4DRQNs
+				aQFrAW0BbwFxAXMBdQF3AZ4B1QH8AgECCQISAhQCGQIk
+				Ai0CNAI3AkACRwJJAksCTQJPAlECgQKCAocCnQKhAq4C
+				swLCAsUC1ALnAugC6gLsAu4C8ALyAvQC9gL4Ax8DRQNs
 				A3EDegN8A4MDhQOHA4kDiwONA70DwgPPA9MD2QPgA+MD
 				5QPnA+oD7APuA/AD9wP6A/wD/gQBBAMEBQQHBBAEGQQg
 				BDUENwQ5BDsEPQRCBEMERQRKBFkEXQRlBG4EcARyBHQE
