--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T18:53:40Z</date>
+						<date>2019-02-01T20:50:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,31 +84,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4wlnzXvRbdQ8
-								TG3L+1wqSA==
+								/CoFhxoVpSn9
+								FLIf5bMWWg==
 								</data>
 								<key>Size</key>
-								<integer>263578</integer>
+								<integer>108494</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								g5wZFTXEWPm9
-								icH0BkbuEQ==
+								gmaAuBE1nYTT
+								ZP9VeBcMIA==
 								</data>
 								<key>Size</key>
-								<integer>27845</integer>
+								<integer>24751</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OTuIK3j5e3ud
-								1QPKou7+Mw==
+								xwR9M3BrQEE0
+								8+CGq2b5qg==
 								</data>
 								<key>Size</key>
-								<integer>162646</integer>
+								<integer>41725</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
