--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-29T15:59:44Z</date>
+						<date>2019-02-01T20:50:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -70,6 +70,16 @@
 								<key>Size</key>
 								<integer>38805</integer>
 							</dict>
+							<key>files/stacks-image-0655a30-350x250.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								CGMCqHLLwgog
+								XwGGhaiz1g==
+								</data>
+								<key>Size</key>
+								<integer>18286</integer>
+							</dict>
 							<key>files/stacks-image-127916a.png</key>
 							<dict>
 								<key>Digest</key>
@@ -100,6 +110,26 @@
 								<key>Size</key>
 								<integer>61496</integer>
 							</dict>
+							<key>files/stacks-image-1fdb6e6-350x250.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								g6thop/HnSKe
+								Ig6OjJrbbA==
+								</data>
+								<key>Size</key>
+								<integer>18459</integer>
+							</dict>
+							<key>files/stacks-image-1fdb6e6-350x250@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								tXjKBMneT+k2
+								iYAI/fgNXQ==
+								</data>
+								<key>Size</key>
+								<integer>26330</integer>
+							</dict>
 							<key>files/stacks-image-3179185-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -110,6 +140,46 @@
 								<key>Size</key>
 								<integer>28413</integer>
 							</dict>
+							<key>files/stacks-image-5433a01-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9DG1zXcng4pv
+								1Cs+7y0zHw==
+								</data>
+								<key>Size</key>
+								<integer>21510</integer>
+							</dict>
+							<key>files/stacks-image-5433a01-350x375@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								IHD+CTacdDRA
+								MnGBEKRyCQ==
+								</data>
+								<key>Size</key>
+								<integer>33052</integer>
+							</dict>
+							<key>files/stacks-image-571e73c-350x375.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								w++uVQIsNKzQ
+								8sk0yV0SyQ==
+								</data>
+								<key>Size</key>
+								<integer>219500</integer>
+							</dict>
+							<key>files/stacks-image-571e73c-350x375@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								0zgjt6cRhe85
+								sQl2mFszmg==
+								</data>
+								<key>Size</key>
+								<integer>722662</integer>
+							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -119,6 +189,26 @@
 								</data>
 								<key>Size</key>
 								<integer>13322</integer>
+							</dict>
+							<key>files/stacks-image-6467c3a-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Krp7Og269lDp
+								zJmYejGYxg==
+								</data>
+								<key>Size</key>
+								<integer>29317</integer>
+							</dict>
+							<key>files/stacks-image-7700296-350x375.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								P6aCQhxrPVYY
+								vqg7M+aIkQ==
+								</data>
+								<key>Size</key>
+								<integer>257542</integer>
 							</dict>
 							<key>files/stacks-image-78f98c2-350x375.jpg</key>
 							<dict>
@@ -180,6 +270,46 @@
 								<key>Size</key>
 								<integer>21714</integer>
 							</dict>
+							<key>files/stacks-image-a0c9938-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								+9qPfPvDFaVC
+								lDF0ikR3Dw==
+								</data>
+								<key>Size</key>
+								<integer>21308</integer>
+							</dict>
+							<key>files/stacks-image-bce74cf-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								rIsBSPXIJg9o
+								JpYbQc66tQ==
+								</data>
+								<key>Size</key>
+								<integer>35003</integer>
+							</dict>
+							<key>files/stacks-image-bded2de-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GFmuIpFOOBIH
+								etd5uUV0Pw==
+								</data>
+								<key>Size</key>
+								<integer>30136</integer>
+							</dict>
+							<key>files/stacks-image-bded2de-350x375@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								LVbyvasYrV91
+								Rc5zjmtsSw==
+								</data>
+								<key>Size</key>
+								<integer>52151</integer>
+							</dict>
 							<key>files/stacks-image-e5e8064-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -230,35 +360,45 @@
 								<key>Size</key>
 								<integer>421454</integer>
 							</dict>
+							<key>files/stacks-image-f9056c6-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								FkA9v/PoA28I
+								V57P/MIy9A==
+								</data>
+								<key>Size</key>
+								<integer>25454</integer>
+							</dict>
 							<key>files/stacks_page_page55.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								kITO5Izi7x1a
-								TVTXCalZew==
+								wb0JvwO7S+D9
+								XJRqKRie9g==
 								</data>
 								<key>Size</key>
-								<integer>168847</integer>
+								<integer>382498</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								+Lxc2vamtSl1
-								fjU9ZfJgSw==
+								V04PVzRX0+uE
+								qWv58rAnnw==
 								</data>
 								<key>Size</key>
-								<integer>26207</integer>
+								<integer>39493</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								kRLeF25VUE3H
-								mnnySJutJg==
+								T90pDGGqp1wc
+								az1jLCIHAA==
 								</data>
 								<key>Size</key>
-								<integer>99302</integer>
+								<integer>306027</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
