--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T20:50:54Z</date>
+						<date>2019-02-01T21:01:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								T90pDGGqp1wc
-								az1jLCIHAA==
+								g3G+quFpZ5zf
+								IPUwBWdUvQ==
 								</data>
 								<key>Size</key>
-								<integer>306027</integer>
+								<integer>306026</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
