--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:56:14Z</date>
+						<date>2019-02-03T16:25:21Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wb0JvwO7S+D9
-								XJRqKRie9g==
+								qPZeQMlJuRg1
+								AodgzeH+MA==
 								</data>
 								<key>Size</key>
-								<integer>382498</integer>
+								<integer>383324</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								U6F5HE6kpI64
-								hxSTlzlsWw==
+								3au0tMwrP616
+								P9l5Y2T59Q==
 								</data>
 								<key>Size</key>
-								<integer>307203</integer>
+								<integer>305673</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
