--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -7864,7 +7864,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:56:14Z</date>
+						<date>2019-02-03T16:25:21Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8203,11 +8203,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wb0JvwO7S+D9
-								XJRqKRie9g==
+								qPZeQMlJuRg1
+								AodgzeH+MA==
 								</data>
 								<key>Size</key>
-								<integer>382498</integer>
+								<integer>383324</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -8223,11 +8223,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								U6F5HE6kpI64
-								hxSTlzlsWw==
+								3au0tMwrP616
+								P9l5Y2T59Q==
 								</data>
 								<key>Size</key>
-								<integer>307203</integer>
+								<integer>305673</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12632,7 +12632,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:56:14Z</date>
+						<date>2019-02-03T16:25:21Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13671,8 +13671,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								69XdAcx1BLma
-								tUJkTPUj8Q==
+								n7FNNog9XA18
+								6UBxG99O4g==
 								</data>
 								<key>Size</key>
 								<integer>3705</integer>
@@ -13759,8 +13759,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcECfAAp
-				K+WAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEDprsY
+				KN2AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -13770,7 +13770,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcECfAApLvmA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEDprsYLyeA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
